# getplatform

./: README.md  getplatform.py  pyproject.toml
getplatform/: __init__.py  getplatform.py
