[tool.poetry]
name = "getplatform"
version = "0.1.5"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
